[package]
name = "golem-mcp"
version = "0.1.0"
edition = "2021"
description = "Golem CLI MCP Server - Bounty #1926"
license = "Apache-2.0"

[[bin]]
name = "golem"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.48", features = ["full", "signal"] }
walkdir = "2.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
warp = "0.3"
anyhow = "1.0"
