[package]
name = "golem-benchmarks"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.golem.cloud/"
authors = ["Simon Popugaev <simon.popugaev@ziverge.com>"]
readme = "README.md"
description = "Benchmarks for OSS version of Golem."
autotests = false

[[bin]]
name = "call-echo"
path = "src/call_echo.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.76"
chrono = { version = "0.4.31", features = ["serde"] }
golem-client = "0.0.63"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
tracing = "0.1.40"
tungstenite = "0.20.1"
url = "2.5.0"
uuid = "1.6.1"
dirs = "5.0.1"
h2 = "0.3.24"
hyper = "0.14.28"
tower = "0.4.13"
env_logger = "0.11.1"
log = "0.4.20"
redis = "0.24.0"
serde_json_path = "0.6.5"
testcontainers = { version = "0.15.0", features = ["async-trait", "tokio"] }
testcontainers-modules = { version = "0.3.2", features = ["postgres", "redis"] }
tokio-postgres = "0.7.10"
tonic = "0.10.2"
tonic-health = "0.10.2"
anyhow = "1.0.80"
golem-cli = {path = "../golem-cli"}
reqwest = { version = "0.11.23", features = ["stream", "json", "multipart"] }
kube = { version = "0.88.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.1", features = ["latest"] }
futures = "0.3.30"
kube-derive = "0.88.1"
schemars = { version = "0.8.16", features = ["derive_json_schema"] }


