[workspace]
resolver = "2"

members = [
    "golem",
    "golem-cli",
    "wasm-rpc-stubgen",
    "wasm-rpc-stubgen/tests-integration"
]

# NOTE: excluded until releasing new version of cloud
exclude = [
    "golem-cloud-cli",
]

[workspace.dependencies]
# Golem git deps
# golem-component-compilation-service = { git = "https://github.com/golemcloud/golem", tag = "v1.1.18" }
# golem-component-service = { git = "https://github.com/golemcloud/golem", tag = "v1.1.18" }
# golem-component-service-base = { git = "https://github.com/golemcloud/golem", tag = "v1.1.18" }
# golem-shard-manager = { git = "https://github.com/golemcloud/golem", tag = "v1.1.18" }
# golem-worker-executor = { git = "https://github.com/golemcloud/golem", tag = "v1.1.18" }
# golem-worker-executor-base = { git = "https://github.com/golemcloud/golem", tag = "v1.1.18" }
# golem-worker-service = { git = "https://github.com/golemcloud/golem", tag = "v1.1.18" }
# golem-worker-service-base = { git = "https://github.com/golemcloud/golem", tag = "v1.1.18" }
golem-component-compilation-service = { path = "../golem/golem-component-compilation-service" }
golem-component-service = { path = "../golem/golem-component-service" }
golem-component-service-base = { path = "../golem/golem-component-service-base" }
golem-shard-manager = { path = "../golem/golem-shard-manager" }
golem-worker-executor = { path = "../golem/golem-worker-executor" }
golem-worker-executor-base = { path = "../golem/golem-worker-executor-base" }
golem-worker-service = { path = "../golem/golem-worker-service" }
golem-worker-service-base = { path = "../golem/golem-worker-service-base" }

golem-wit = { git = "https://github.com/golemcloud/golem-wit.git", rev = "3ab953070b7926aba50cc02a99ead84c38a80c95" }

# Golem crates.io deps
golem-api-grpc = "=1.1.16"
# TODO
# golem-client = "=1.1.16"
# golem-common = "=1.1.16"
# golem-rib = "=1.1.16"
# golem-service-base = "=1.1.16"
# golem-test-framework = "=1.1.16"
# golem-wasm-ast = { version = "=1.1.16", default-features = false, features = ["analysis"] }
# golem-wasm-rpc = { version = "=1.1.16", default-features = false, features = ["host"] }

golem-client = { path = "../golem/golem-client" }
golem-common = { path = "../golem/golem-common" }
golem-rib = { path = "../golem/golem-rib" }
golem-service-base = { path = "../golem/golem-service-base" }
golem-test-framework = { path = "../golem/golem-test-framework" }
golem-wasm-ast = { path = "../golem/wasm-ast", default-features = false, features = ["analysis"] }
golem-wasm-rpc = { path = "../golem/wasm-rpc", default-features = false, features = ["host"] }

golem-cloud-client = "=1.1.3"

golem-examples = "=1.1.1"

# Non-golem deps
anyhow = "1.0.95"
assert2 = "0.3.15"
async-recursion = "1.1.1"
async-trait = "0.1.86"
async_zip = { version = "0.0.17", features = ["tokio", "tokio-fs", "deflate"] }
base64 = "0.22.1"
blake3 = "1.5.5"
bytes = "1.10.0"
cargo-component = "=0.20.0"
cargo-component-core = "=0.20.0"
cargo_toml = "0.21.0"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
clap_complete = "4.5.45"
cli-table = "0.4.9"
colored = "3.0.0"
derive_more = { version = "2.0.1", features = ["display", "into", "from_str"] }
dir-diff = "0.3.3"
dirs = "6.0.0"
env_logger = "0.11.5"
fs_extra = "1.3.0"
futures = "0.3.31"
futures-util = "0.3.31"
glob = "0.3.2"
h2 = "0.4.8"
heck = "0.5.0"
http = "1.2.0"
http-body-util = "0.1.2"
humansize = "2.1.3"
hyper = "1.6.0"
id-arena = "2.2.1"
indexmap = "2.7.0"
indoc = "2.0.5"
inquire = "0.7.5"
iso8601 = "0.6.2"
itertools = "0.14.0"
lenient_bool = "0.1.1"
log = "0.4.25"
minijinja = "2.7.0"
native-tls = "0.2.13"
openapiv3 = "2.0.0"
opentelemetry = "0.28.0"
opentelemetry-prometheus = "0.28.0"
opentelemetry_sdk = "0.28.0"
phf = { version = "0.11.3", features = ["macros"] }
poem = "3.1.6"
postgres = "0.19.10"
pretty_env_logger = "0.5.0"
prettyplease = "0.2.25"
proc-macro2 = "1.0.92"
prometheus = "0.13.4"
quote = "1.0.37"
rand = "0.9.0"
redis = "0.29.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
rustls = "0.23.23"
semver = "1.0.23"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_json_path = "0.7.1"
serde_yaml = "0.9.34"
shlex = "1.3.0"
sqlx = "0.8.3"
strip-ansi-escapes = "0.2.0"
strum = "0.27.1"
strum_macros = "0.27.1"
syn = "2.0.90"
tempfile = "3.17.1"
test-r = "2.1.0"
testcontainers = "0.23.2"
testcontainers-modules = "0.11.6"
textwrap = "0.16.1"
tokio = "1.43.0"
tokio-postgres = "0.7.13"
tokio-stream = { version = "0.1.17", features = ["fs"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
toml = "0.8.19"
tonic = "0.12.3"
tonic-health = "0.12.3"
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = "1.13.2"
version-compare = "0.2.0"
wac-graph = "=0.6.1"
walkdir = "2.5.0"
wasm-wave = "0.225.0"
wit-bindgen-rust = "=0.26.0"
wit-encoder = "=0.221.2"
wit-parser = "=0.221.3"

[patch.crates-io]
redis-protocol = { git = "https://github.com/golemcloud/redis-protocol.rs.git", branch = "unpin-cookie-factory" }
wasmtime = { git = "https://github.com/golemcloud/wasmtime.git", branch = "golem-wasmtime-v27.0.0" }
wasmtime-wasi = { git = "https://github.com/golemcloud/wasmtime.git", branch = "golem-wasmtime-v27.0.0" }
wasmtime-wasi-http = { git = "https://github.com/golemcloud/wasmtime.git", branch = "golem-wasmtime-v27.0.0" }
