[workspace]
resolver = "2"

members = [
    "golem",
    "golem-cli",
    "golem-cloud-cli",
    "wasm-rpc-stubgen",
]

[workspace.dependencies]
# Golem wit - git deps
golem-wit = { git = "https://github.com/golemcloud/golem-wit.git", tag = "v1.1.11" }

# Golem dep
golem-client = "=1.1.20"
golem-common = "=1.1.20"
golem-rib = "=1.1.20"
golem-service-base = "=1.1.20"
golem-test-framework = "=1.1.20"
golem-wasm-ast = { version = "=1.1.20", default-features = false, features = ["analysis"] }
golem-wasm-rpc = { version = "=1.1.20", default-features = false, features = ["host"] }

# Golem cloud deps
golem-cloud-client = "=1.1.4"

# Golem examples deps
golem-examples = "=1.1.1"

# External deps
anyhow = "1.0.95"
assert2 = "0.3.15"
async-trait = "0.1.86"
async_zip = { version = "0.0.17", features = ["tokio", "tokio-fs", "deflate"] }
base64 = "0.22.1"
blake3 = "1.5.5"
bytes = "1.10.0"
cargo-component = "=0.20.0"
cargo-component-core = "=0.20.0"
cargo_toml = "0.21.0"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
clap_complete = "4.5.45"
cli-table = "0.4.9"
colored = "3.0.0"
derive_more = { version = "2.0.1", features = ["display", "into", "from_str"] }
dirs = "6.0.0"
fs_extra = "1.3.0"
futures = "0.3.31"
futures-util = "0.3.31"
heck = "0.5.0"
http = "1.2.0"
http-body-util = "0.1.2"
humansize = "2.1.3"
hyper = "1.6.0"
id-arena = "2.2.1"
include_dir = "0.7.4"
indexmap = "2.7.0"
indoc = "2.0.5"
inquire = "0.7.5"
iso8601 = "0.6.2"
itertools = "0.14.0"
lenient_bool = "0.1.1"
log = "0.4.25"
minijinja = "2.7.0"
native-tls = "0.2.13"
opentelemetry = "0.28.0"
opentelemetry-prometheus = "0.28.0"
opentelemetry_sdk = "0.28.0"
phf = { version = "0.11.3", features = ["macros"] }
poem = "3.1.6"
pretty_env_logger = "0.5.0"
prettyplease = "0.2.25"
proc-macro2 = "1.0.92"
prometheus = "0.13.4"
quote = "1.0.37"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
rustls = "0.23.23"
semver = "1.0.23"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_json_path = "0.7.1"
serde_yaml = "0.9.34"
shlex = "1.3.0"
sqlx = "0.8.3"
strip-ansi-escapes = "0.2.0"
strum = "0.27.1"
strum_macros = "0.27.1"
syn = "2.0.90"
tempfile = "3.17.1"
test-r = "2.1.0"
textwrap = "0.16.1"
tokio = "1.43.0"
tokio-postgres = "0.7.13"
tokio-stream = { version = "0.1.17", features = ["fs"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = "1.13.2"
version-compare = "0.2.0"
wac-graph = "=0.6.1"
walkdir = "2.5.0"
wax = "0.6.0"
wit-bindgen-rust = "=0.26.0"
wit-encoder = "=0.221.2"
wit-parser = "=0.221.3"

[patch.crates-io]
redis-protocol = { git = "https://github.com/golemcloud/redis-protocol.rs.git", branch = "unpin-cookie-factory" }
wasmtime = { git = "https://github.com/golemcloud/wasmtime.git", branch = "golem-wasmtime-v27.0.0" }
wasmtime-wasi = { git = "https://github.com/golemcloud/wasmtime.git", branch = "golem-wasmtime-v27.0.0" }
wasmtime-wasi-http = { git = "https://github.com/golemcloud/wasmtime.git", branch = "golem-wasmtime-v27.0.0" }
