[package]
name = "cloud-api-grpc"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
description = "GRPC API for Golem Cloud services"


[lib]

[dependencies]
golem-api-grpc = { path = "../golem-services/golem-api-grpc", version = "0.0.0" }

async-trait = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
futures-core = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
golem-api-grpc = { path =  "../golem-services/golem-api-grpc", version = "0.0.0" }
tonic-build = "0.10.2"
