[package]
name = "cloud-common"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
golem-common = { workspace = true }
golem-api-grpc = { workspace = true }
cloud-api-grpc = { path = "../cloud-api-grpc" }

async-trait = { workspace = true }
bincode = { workspace = true }
derive_more = { workspace = true }
http = { workspace = true }
num-traits = { workspace = true }
poem = { workspace = true, features = ["test"] }
poem-openapi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
