[package]
name = "cloud-common"
version = "0.1.0"
edition = "2021"

[lib]
harness = false

[features]
default = ["poem", "protobuf", "model"]
poem = []
protobuf = []
model = []

[dependencies]
golem-api-grpc = { workspace = true }
golem-common = { workspace = true }
golem-wasm-ast = { workspace = true }
golem-wasm-rpc = { workspace = true }
cloud-api-grpc = { path = "../cloud-api-grpc" }

async-trait = { workspace = true }
axum = { workspace = true }
bincode = { workspace = true }
derive_more = { workspace = true }
figment = { workspace = true }
headers = { workspace = true }
http = { workspace = true }
num-traits = { workspace = true }
poem = { workspace = true, features = ["test"] }
poem-openapi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "uuid",
    "migrate",
    "chrono",
] }

[dev-dependencies]
test-r = { workspace = true }