[package]
name = "cloud-component-compilation-service"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "cloud-component-compilation-service"
test = false

[dependencies]
golem-component-compilation-service = { path = "../golem-component-compilation-service", version = "=0.0.0" }
golem-common = { path = "../golem-common", version = "=0.0.0" }

anyhow = { workspace = true }
prometheus = { workspace = true }
tokio = { workspace = true }
